# pencil

./: .gitignore  Cargo.toml  LICENSE  README.md  mix.exs
apps/pencil_core/: .gitignore  README.md  mix.exs
apps/pencil_core/lib/pencil/: core.ex
apps/pencil_core/lib/pencil/core/: application.ex  wrapper.ex
apps/pencil_core/lib/pencil/core/wrapper/: watchdog.ex
apps/pencil_core/test/pencil/: core_test.exs
apps/pencil_discord/: README.md  mix.exs
apps/pencil_discord/lib/pencil/: discord.ex
apps/pencil_discord/lib/pencil/discord/: application.ex  command.ex  consumer.ex  notifier.ex  util.ex
apps/pencil_discord/lib/pencil/discord/command/: cmdreload.ex  help.ex  invalid.ex  parser.ex  ping.ex  predicate.ex  registry.ex
apps/pencil_discord/test/pencil/: discord_test.exs
assets/: logo.aseprite
config/: config.exs  dev.exs  prod.exs  runtime.example.exs  runtime.exs  runtime.local.example.exs
rel/: config.exs
server-command-wrapper/: Cargo.toml  README.md
server-command-wrapper/src/: main.rs
